# supermarket-project

./: CMakeLists.txt  README.md
yolov5_ros/: package.xml
yolov5_ros/launch/: yolo_v5.launch
yolov5_ros/scripts/: tts_subscriber.py  voice_command_publisher.py  yolo_v5.py
yolov5_ros_msgs/: CMakeLists.txt  package.xml
