<?xml version="1.0"?>
<package format="2">
  <name>yolov5_ros_msgs</name>
  <version>1.0.0</version>
  <description>The yolov5_ros_msgs package</description>

  <maintainer email="xinyiwangnoctis@outlook.com">XinyiWang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies for building the package -->
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencies for exporting the package -->
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <!-- Dependencies for executing the package -->
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>

